<?xml version="1.0"?>
<package format="3">
  <name>sick_safetyscanners</name>
  <version>1.0.5</version>
  <description>Provides an Interface to read the sensor output of a SICK
  Safety Scanner</description>

  <maintainer email="puck@fzi.de">Lennart Puck</maintainer>
  <maintainer email="keshav@tractonomy.com">keshav</maintainer>
  <maintainer email="elias@tractonomy.com">Elias De Coninck</maintainer>

  <author>Lennart Puck</author>

  <license>ALv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>common_interfaces</depend>
  <depend>libboost-system-dev</depend>
  <depend>libboost-thread-dev</depend>
  <depend>libboost-log-dev</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
